[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/Player/PlayerShipDBFR.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Script/Level/LevelTest.gd" type="Script" id=3]
[ext_resource path="res://Asset/World/DefaultEnv.tres" type="Environment" id=4]
[ext_resource path="res://Scene/Enemy/EnemyBos2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Player/PlayerShipShield.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/UI or HUD/HUD.tscn" type="PackedScene" id=7]

[node name="LevelTest" type="Node2D" groups=["Level"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 232, -24 )
scale = Vector2( 11.25, 0.5 )
z_index = -2
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 232, 296 )
scale = Vector2( 11.25, 0.5 )
z_index = -2
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -16, 128 )
rotation = 1.5708
scale = Vector2( 11.25, 0.5 )
z_index = -2
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 488, 128 )
rotation = 1.5708
scale = Vector2( 11.25, 0.5 )
z_index = -2
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="EnemyBos2" parent="." instance=ExtResource( 5 )]

[node name="PlayerShipDBFR" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 168 )
ready = true

[node name="PlayerShipShield" parent="." instance=ExtResource( 6 )]
position = Vector2( 328, 168 )
player = 2
ready = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
